--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 #display, #buttons * {
     background-color: rgb(180,180,180);
     border: 2px solid rgb(160,160,160);
-    font-size: 20px;
+    font-size: 100%;
     font-family: "Arial Black", serif;
 }
 #buttons * {
