--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     border: 2px solid rgb(160,160,160);
     font-size: 100%;
     font-family: "Arial Black", serif;
+    overflow: auto;
 }
 #buttons * {
     text-align: center;
